<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_80_yellow"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/rank_bg"
        android:orientation="vertical">

        <!-- 日榜 分类 -->
        <RadioGroup
            android:id="@+id/ra_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/space_24"
            android:layout_marginRight="@dimen/space_24"
            android:layout_marginTop="@dimen/space_40"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingTop="@dimen/space_12"
                android:paddingBottom="@dimen/space_12"
                android:layout_marginLeft="@dimen/space_12"
                android:layout_marginRight="@dimen/space_12"
                android:checked="true"
                android:textColor="@color/radiobutton_textcolor"
                android:background="@drawable/ra_selector_checked"
                android:text="@string/ra_day" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:layout_marginLeft="@dimen/space_12"
                android:layout_marginRight="@dimen/space_12"
                android:paddingTop="@dimen/space_12"
                android:paddingBottom="@dimen/space_12"
                android:gravity="center"
                android:textColor="@color/radiobutton_textcolor"
                android:background="@drawable/ra_selector_checked"
                android:text="@string/ra_week" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:background="@drawable/ra_selector_checked"
                android:paddingTop="@dimen/space_12"
                android:paddingBottom="@dimen/space_12"
                android:layout_marginLeft="@dimen/space_12"
                android:layout_marginRight="@dimen/space_12"
                android:gravity="center"
                android:textColor="@color/radiobutton_textcolor"
                android:text="@string/ra_month" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:background="@drawable/ra_selector_checked"
                android:gravity="center"
                android:layout_marginLeft="@dimen/space_12"
                android:layout_marginRight="@dimen/space_12"
                android:paddingTop="@dimen/space_12"
                android:paddingBottom="@dimen/space_12"
                android:textColor="@color/radiobutton_textcolor"
                android:text="@string/ra_all" />

        </RadioGroup>
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!-- 第二名 -->
            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/ly_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_50"
                android:layout_marginTop="@dimen/space_170"
                >
                <ImageView
                    android:id="@+id/img_head_second_bg"
                    android:layout_width="@dimen/space_150"
                    android:layout_height="@dimen/space_150"
                    android:src="@mipmap/icon_second_head_bg"
                    android:layout_below="@id/img_yin_guan"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-18dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_second_user_head"
                    android:layout_width="@dimen/space_150"
                    android:layout_height="@dimen/space_150"
                    android:src="@mipmap/icon_live"
                    android:padding="@dimen/space_8"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/img_yin_guan"
                    android:layout_marginTop="-18dp"
                    />
                <ImageView
                    android:id="@+id/img_yin_guan"
                    android:layout_width="@dimen/space_120"
                    android:layout_height="@dimen/space_120"
                    android:src="@mipmap/icon_yin_guan"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/tv_second_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="土豆里的虫子"
                    android:layout_below="@id/img_second_user_head"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@mipmap/icon_name_bg"
                    android:paddingTop="@dimen/space_6"
                    android:paddingBottom="@dimen/space_6"
                    android:paddingLeft="@dimen/space_20"
                    android:paddingRight="@dimen/space_20"
                    android:textColor="#7b7b7b"
                    android:gravity="center"
                    android:textSize="@dimen/space_26"
                    android:drawablePadding="@dimen/space_16"
                    />
                <TextView
                    android:id="@+id/tv_second_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_second_money_bg"
                    android:layout_below="@id/tv_second_nickname"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/space_20"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_26px"
                    android:text="打赏80元"
                    android:paddingTop="@dimen/space_2"
                    android:gravity="center_horizontal"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>
            <!-- 第一名 -->
            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/ly_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ly_second"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginTop="@dimen/space_100"
                >
                <ImageView
                    android:id="@+id/img_head_first_bg"
                    android:layout_width="@dimen/space_150"
                    android:layout_height="@dimen/space_150"
                    android:src="@mipmap/icon_first_head_bg"
                    android:layout_below="@id/img_jin_guan"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-18dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_first_user_head"
                    android:layout_width="@dimen/space_150"
                    android:layout_height="@dimen/space_150"
                    android:src="@mipmap/icon_live"
                    android:padding="@dimen/space_8"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/img_jin_guan"
                    android:layout_marginTop="-18dp"
                    />
                <ImageView
                    android:id="@+id/img_jin_guan"
                    android:layout_width="@dimen/space_120"
                    android:layout_height="@dimen/space_120"
                    android:src="@mipmap/icon_jin_guna"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/tv_first_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="土豆里的虫子"
                    android:layout_below="@id/img_first_user_head"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@mipmap/icon_name_bg"
                    android:paddingTop="@dimen/space_6"
                    android:paddingBottom="@dimen/space_6"
                    android:paddingLeft="@dimen/space_20"
                    android:paddingRight="@dimen/space_20"
                    android:textColor="#7b7b7b"
                    android:gravity="center"
                    android:textSize="@dimen/space_26"
                    android:drawablePadding="@dimen/space_16"
                    />
                <TextView
                    android:id="@+id/tv_first_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_first_money_bg"
                    android:layout_below="@id/tv_first_nickname"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/space_20"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_26px"
                    android:text="打赏100元"
                    android:paddingTop="@dimen/space_2"
                    android:gravity="center_horizontal"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>
            <!-- 第三名 -->
            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/ly_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ly_one"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginTop="@dimen/space_220"
                >
                <ImageView
                    android:id="@+id/img_head_third_bg"
                    android:layout_width="@dimen/space_150"
                    android:layout_height="@dimen/space_150"
                    android:src="@mipmap/icon_third_head_bg"
                    android:layout_below="@id/img_tong_guan"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-18dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_third_user_head"
                    android:layout_width="@dimen/space_150"
                    android:layout_height="@dimen/space_150"
                    android:src="@mipmap/icon_live"
                    android:padding="@dimen/space_8"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/img_tong_guan"
                    android:layout_marginTop="-18dp"
                    />
                <ImageView
                    android:id="@+id/img_tong_guan"
                    android:layout_width="@dimen/space_120"
                    android:layout_height="@dimen/space_120"
                    android:src="@mipmap/icon_tong_guna"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/tv_third_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="土豆里的虫子"
                    android:layout_below="@id/img_third_user_head"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@mipmap/icon_name_bg"
                    android:paddingTop="@dimen/space_6"
                    android:paddingBottom="@dimen/space_6"
                    android:paddingLeft="@dimen/space_20"
                    android:paddingRight="@dimen/space_20"
                    android:textColor="#7b7b7b"
                    android:gravity="center"
                    android:textSize="@dimen/space_26"
                    android:drawablePadding="@dimen/space_16"
                    />
                <TextView
                    android:id="@+id/tv_third_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_third_money_bg"
                    android:layout_below="@id/tv_third_nickname"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/space_20"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_26px"
                    android:text="打赏50元"
                    android:paddingTop="@dimen/space_2"
                    android:gravity="center_horizontal"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoRelativeLayout>

    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>